objects/adapps__OptimizerPlus_Field_Usage_Item__c.object
<CustomObject>
    <fields>
        <fullName>adapps__Field_Usage__c</fullName>
        <label>Field Usage</label>
        <referenceTo>adapps__OptimizerPlus_Field_Usage__c</referenceTo>
        <relationshipLabel>Field Usage Items</relationshipLabel>
        <relationshipName>Field_Usage_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>adapps__Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__Url__c</fullName>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <label>Field Usage Item</label>
    <nameField>
        <label>Field Usage Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Usage Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>